// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exposes CSS Modules in the same object as customs 1`] = `
"exports = module.exports = require(\\"../../node_modules/css-loader/lib/css-base.js\\")(false);
// imports


// module
exports.push([module.id, \\":root {\\\\n  --primary-color: lightblue;\\\\n}\\\\n\\\\n._3KySKA6rf07sl0ilq7bBBm {\\\\n  color: lightblue;\\\\n  color: var(--primary-color);\\\\n}\\\\n\\", \\"\\"]);

// exports
exports.locals = {
	\\"text\\": \\"_3KySKA6rf07sl0ilq7bBBm\\"
};

exports.locals = exports.locals || {};
exports.locals[\\"customMedia\\"] = {
  \\"--narrow-window\\": \\"(max-width: 30em)\\"
};
exports.locals[\\"customProperties\\"] = {
  \\"--primary-color\\": \\"lightblue\\"
};
exports.locals[\\"customSelectors\\"] = {
  \\":--title\\": \\"h1\\"
};"
`;

exports[`exposes CSS customs in the default export object 1`] = `
"exports = module.exports = require(\\"../../node_modules/css-loader/lib/css-base.js\\")(false);
// imports


// module
exports.push([module.id, \\":root {\\\\n  --primary-color: lightblue;\\\\n}\\\\n\\", \\"\\"]);

// exports

exports.locals = exports.locals || {};
exports.locals[\\"customMedia\\"] = {
  \\"--narrow-window\\": \\"(max-width: 30em)\\"
};
exports.locals[\\"customProperties\\"] = {
  \\"--primary-color\\": \\"lightblue\\"
};
exports.locals[\\"customSelectors\\"] = {
  \\":--title\\": \\"h1\\"
};"
`;

exports[`uses PostCSS plugins before postcss-preset-env 1`] = `
"exports = module.exports = require(\\"../../node_modules/css-loader/lib/css-base.js\\")(false);
// imports


// module
exports.push([module.id, \\":root {\\\\n  --primary-color: #1da1f2;\\\\n}\\\\n\\", \\"\\"]);

// exports

exports.locals = exports.locals || {};
exports.locals[\\"customMedia\\"] = {};
exports.locals[\\"customProperties\\"] = {
  \\"--primary-color\\": \\"#1da1f2\\"
};
exports.locals[\\"customSelectors\\"] = {};"
`;

exports[`uses webpack loaders after postcss-loader 1`] = `
"exports = module.exports = require(\\"../../node_modules/css-loader/lib/css-base.js\\")(false);
// imports


// module
exports.push([module.id, \\":root {\\\\n  --primary-color: lightblue;\\\\n}\\\\n.text {\\\\n  color: lightblue;\\\\n  color: var(--primary-color);\\\\n}\\\\n\\", \\"\\"]);

// exports

exports.locals = exports.locals || {};
exports.locals[\\"customMedia\\"] = {};
exports.locals[\\"customProperties\\"] = {
  \\"--primary-color\\": \\"lightblue\\"
};
exports.locals[\\"customSelectors\\"] = {};"
`;
